...
                    android:textSize="@dimen/textsize_large"
                    android:textColor="@color/black"/>
        
        
        
                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/margin_xlarge"
                    android:padding="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_large"
...
                    android:textColor="@color/white"
                    android:textSize="@dimen/textsize_large" />
        
        
        
                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/margin_large"
                    android:padding="@dimen/margin_large"
                    android:layout_marginBottom="@dimen/margin_large"
...
